--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     
+    <div class="container">
+
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="main.js"></script>
 </body>
