--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <div class="container">
-
+        <div id="chart"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
