added two event methods to display plot bars vertically or horizontally on btn click events

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <div class="container">
         <div id="chart"></div>
+        <button id="horiz">Horizontal</button>
+        <button id="vert">Vertical</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
